Assembler Agents Replacement