@@ -13,6 +13,8 @@ import jade.lang.acl.ACLMessage;
 import jade.wrapper.AgentController;
 import jade.wrapper.ContainerController;
 import jade.wrapper.StaleProxyException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -37,16 +39,40 @@ public class AssemblerManager extends Agent implements Manager<AID, AssemblerTyp
 		addBehaviour(new CyclicBehaviour() {
 			@Override
 			public void action() {
-				ACLMessage msg = blockingReceive();
-				ProductOrder order = JsonConverter.fromJsonString(msg.getContent(), ProductOrder.class);
-				ProductPlan plan = new ProductPlan(order);
+				ACLMessage msg = receive();
+				if (msg != null) {
+					if (msg.getPerformative() == ACLMessage.INFORM) {
+						ProductOrder order = JsonConverter.fromJsonString(msg.getContent(), ProductOrder.class);
+						ProductPlan plan = new ProductPlan(order);
 
-				ACLMessage msgToAssemblers = new ACLMessage();
-				msgToAssemblers.setContent(JsonConverter.toJsonString(plan));
-				for (AID assembler : workingAssemblers.values()) {
-					msgToAssemblers.addReceiver(assembler);
+						ACLMessage msgToAssemblers = new ACLMessage();
+						msgToAssemblers.setPerformative(ACLMessage.INFORM);
+						msgToAssemblers.setContent(JsonConverter.toJsonString(plan));
+						for (AID assembler : workingAssemblers.values()) {
+							msgToAssemblers.addReceiver(assembler);
+						}
+						send(msgToAssemblers);
+					} else if (msg.getPerformative() == ACLMessage.CANCEL) {
+						AID deadMachine = msg.getSender();
+						AssemblerType key = getKey(workingAssemblers, deadMachine);
+
+						if (key != null) {
+							var replacementMessage = new ACLMessage();
+							if (spareAssemblers.get(key).isEmpty()) {
+								System.out.println("No more " + key + " assemblers left.");
+								return;
+							}
+							replacementMessage.addReceiver(spareAssemblers.get(key).get(0));
+							replacementMessage.setPerformative(ACLMessage.PROPOSE);
+							send(replacementMessage);
+
+							workingAssemblers.computeIfPresent(key, (e, a) -> spareAssemblers.get(key).get(0));
+							spareAssemblers.get(key).remove(0);
+						}
+					}
+				} else {
+					block();
 				}
-				send(msgToAssemblers);
 			}
 		});
 	}
@@ -64,19 +90,28 @@ public class AssemblerManager extends Agent implements Manager<AID, AssemblerTyp
 	private void setupSpareAssemblers() {
 		ContainerController cc = startBackupContainer();
 
-		getSpareMachines().put(AssemblerType.Sole, List.of(
-				startBackupAssemblerAgent(AssemblerType.Sole + "1", cc),
-				startBackupAssemblerAgent(AssemblerType.Sole + "2", cc)
+		getSpareMachines().put(AssemblerType.Sole, new ArrayList<>(
+				Arrays.asList(
+						startBackupAssemblerAgent(AssemblerType.Sole + "1", cc),
+						startBackupAssemblerAgent(AssemblerType.Sole + "2", cc),
+						startBackupAssemblerAgent(AssemblerType.Sole + "3", cc)
+				)
 		));
 
-		getSpareMachines().put(AssemblerType.Fabric, List.of(
-				startBackupAssemblerAgent(AssemblerType.Fabric + "1", cc),
-				startBackupAssemblerAgent(AssemblerType.Fabric + "2", cc)
+		getSpareMachines().put(AssemblerType.Fabric, new ArrayList<>(
+				Arrays.asList(
+						startBackupAssemblerAgent(AssemblerType.Fabric + "1", cc),
+						startBackupAssemblerAgent(AssemblerType.Fabric + "2", cc),
+						startBackupAssemblerAgent(AssemblerType.Fabric + "3", cc)
+				)
 		));
 
-		getSpareMachines().put(AssemblerType.Final, List.of(
-				startBackupAssemblerAgent(AssemblerType.Final + "1", cc),
-				startBackupAssemblerAgent(AssemblerType.Final + "2", cc)
+		getSpareMachines().put(AssemblerType.Final, new ArrayList<>(
+				Arrays.asList(
+						startBackupAssemblerAgent(AssemblerType.Final + "1", cc),
+						startBackupAssemblerAgent(AssemblerType.Final + "2", cc),
+						startBackupAssemblerAgent(AssemblerType.Final + "3", cc)
+				)
 		));
 	}
 
@@ -95,6 +130,23 @@ public class AssemblerManager extends Agent implements Manager<AID, AssemblerTyp
 		return spareAssemblers;
 	}
 
+	private ContainerController startBackupContainer() {
+		jade.core.Runtime runtime = jade.core.Runtime.instance();
+		Profile profile = new ProfileImpl();
+		profile.setParameter(Profile.CONTAINER_NAME, "BackupAssemblers");
+		profile.setParameter(Profile.MAIN_HOST, "localhost");
+		return runtime.createAgentContainer(profile);
+	}
+
+	private static <K, V> K getKey(Map<K, V> map, V value) {
+		for (K key : map.keySet()) {
+			if (value.equals(map.get(key))) {
+				return key;
+			}
+		}
+		return null;
+	}
+
 	private AID startAssemblerAgent(AssemblerType type) {
 		ContainerController cc = getContainerController();
 		try {
@@ -106,17 +158,10 @@ public class AssemblerManager extends Agent implements Manager<AID, AssemblerTyp
 		}
 	}
 
-	private ContainerController startBackupContainer() {
-		jade.core.Runtime runtime = jade.core.Runtime.instance();
-		Profile profile = new ProfileImpl();
-		profile.setParameter(Profile.CONTAINER_NAME, "BackupAssemblers");
-		profile.setParameter(Profile.MAIN_HOST, "localhost");
-		return runtime.createAgentContainer(profile);
-	}
-
 	private AID startBackupAssemblerAgent(String name, ContainerController cc) {
 		try {
 			AgentController ac = cc.createNewAgent("AssemblerBackup" + name, "agents.workers.assemblers.AssemblerAgent", new Object[]{getAID()});
+			ac.start();
 			return new AID(ac.getName(), AID.ISGUID);
 		} catch (Exception e) {
 			e.printStackTrace();
